<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PublicEventDescription" android:background="#010203">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar">
            </include>

            <TextView
                android:id="@+id/Description"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Location"
                android:layout_alignEnd="@+id/app_bar"
                android:layout_alignRight="@+id/app_bar"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                android:textColor="#837b7a"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Location" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="59dp"
                android:layout_height="25dp"
                android:layout_below="@+id/app_bar"
                android:layout_alignStart="@+id/tv_location"
                android:layout_alignLeft="@+id/tv_location"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="39dp"
                android:text="DATE:"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/Time"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="225dp"
                android:layout_height="31dp"
                android:layout_below="@+id/app_bar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_toEndOf="@+id/tv_date"
                android:layout_toRightOf="@+id/tv_date"
                android:text="TextView"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="72dp"
                android:layout_height="25dp"
                android:layout_below="@+id/tv_date"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="TIME:"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/Time"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="251dp"
                android:layout_height="30dp"
                android:layout_below="@+id/app_bar"
                android:layout_alignEnd="@+id/app_bar"
                android:layout_alignRight="@+id/app_bar"
                android:layout_marginStart="57dp"
                android:layout_marginLeft="57dp"
                android:layout_marginTop="82dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/tv_time"
                android:layout_toRightOf="@+id/tv_time"
                android:text="TextView"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_time"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="8dp"
                android:text="LOCATION:"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"
                app:layout_constraintVertical_bias="0.016" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="49dp"
                android:layout_marginLeft="49dp"
                android:layout_marginTop="183dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/tv_location"
                android:layout_toRightOf="@+id/tv_location"
                android:text="TextView"
                android:textColor="#837b7a"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_location"
                app:layout_constraintTop_toBottomOf="@+id/Time"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_location"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Description"
                android:layout_marginEnd="129dp"
                android:layout_marginLeft="117dp"
                android:layout_marginRight="129dp"
                android:layout_marginStart="117dp"
                android:layout_marginTop="53dp"
                android:background="#0b2540"
                android:text="Location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.402"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jevent" />

            <Button
                android:id="@+id/btn_jevent"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_location"
                android:layout_marginEnd="129dp"
                android:layout_marginLeft="117dp"
                android:layout_marginRight="129dp"
                android:layout_marginStart="117dp"
                android:layout_marginTop="23dp"
                android:background="#0b2540"
                android:text="Join Event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.399"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description" />

            <TextView
                android:id="@+id/tv_going"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_jevent"
                android:layout_marginEnd="182dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="182dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="19dp"
                android:text="People Going"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_location" />

            <ListView
                android:id="@+id/listMembers"
                android:layout_width="wrap_content"
                android:layout_height="341dp"
                android:layout_below="@+id/tv_going"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_going" />
        </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>